force-app/main/default/objects/GuestArticleVote__c/GuestArticleVote__c.object-meta.xml
<CustomObject>
    <label>GuestArticleVote</label>
    <nameField>
        <displayFormat>KnowledgeFeedback-{0000}</displayFormat>
        <label>GuestArticleVote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GuestArticleVote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>