force-app/main/default/objects/GuestArticleVote__c/fields/GuestUserId__c.field-meta.xml
<CustomField>
    <fullName>GuestUserId__c</fullName>
    <label>GuestUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>