force-app/main/default/objects/GuestArticleVote__c/fields/IsUpvoted__c.field-meta.xml
<CustomField>
    <fullName>IsUpvoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upvoted?</label>
    <type>Checkbox</type>
</CustomField>